files/css/index.css
body {
    font-family: 'Ubuntu', sans-serif;
}

#title {
	font-size: 2.5em;
    text-align: center;
	margin: auto;
  	width: 50%;
  	margin-top: 1em;
}

#header {
	font-size: 1.2em;
	text-align: center;
	margin: auto;
  	width: 50%;
  	margin-bottom: 3em;
  	border-top: black solid 2px;
    border-bottom: black solid 2px;
    padding-bottom: 5px;
}

#links a {
	margin: 1mm;
}

#skills {
	width: 15em;
	float: left;
	margin-left: 8em;
	padding: 20px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 10px rgba(0, 0, 0, 0.19);
	height: 20em;
}

#interests {
	width: 15em;
	float: right;
	margin-right:8em;
	padding: 20px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 10px rgba(0, 0, 0, 0.19);
	height: 20em;
}

#container {
	margin: auto;
	width: 50%;
	margin-top: 5em;
}

#container h2 {
	text-align: center;
}

#container li {
	margin-top: 10px;
	list-style-type: none;
}

#circle1 {
	background-color: #EACBD2;
	height: 700px;
	width: 700px;
	border-radius: 50%;
	display: block;
	position: fixed;
	left: -300px;
	top: -300px;
}

#circle2 {
	background-color: #89D2DC;
	height: 700px;
	width: 700px;
	border-radius: 50%;
	display: block;
	position: fixed;
	bottom: -300px;
	right: -300px;
}

